[gd_scene load_steps=9 format=2]

[ext_resource path="res://ClosingGradient.png" type="Texture" id=1]
[ext_resource path="res://ground1.png" type="Texture" id=2]
[ext_resource path="res://fonts/pixelMiners25.tres" type="DynamicFont" id=3]
[ext_resource path="res://PixelMiners-KKal.otf" type="DynamicFontData" id=4]
[ext_resource path="res://gameStart/returnToTitle.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
extra_spacing_top = 53
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 35
extra_spacing_top = 17
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[node name="ClosingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ClosingGradient" type="Sprite" parent="."]
position = Vector2( 510.27, 301.476 )
scale = Vector2( 0.869702, 0.755516 )
texture = ExtResource( 1 )

[node name="ground" type="Sprite" parent="ClosingGradient"]
position = Vector2( 2.82813, -96.0339 )
scale = Vector2( 1.2843, 1.34592 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 97.6672
margin_top = 72.3327
margin_right = 927.667
margin_bottom = 512.333
rect_min_size = Vector2( 830, 440 )

[node name="GaemOver" type="Label" parent="VBoxContainer"]
margin_right = 830.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.92549, 0.396078, 0.396078, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Game Over"
align = 1

[node name="Survive" type="Label" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 830.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.92549, 0.396078, 0.396078, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "You've survived "
align = 1

[node name="seconds" type="Label" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 830.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 2 )
text = "seconds"
align = 1

[node name="TryAgain" type="Button" parent="."]
margin_left = 350.0
margin_top = 400.0
margin_right = 650.0
margin_bottom = 445.0
rect_min_size = Vector2( 300, 45 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Try again?"
script = ExtResource( 5 )
[connection signal="pressed" from="TryAgain" to="TryAgain" method="_on_TryAgain_pressed"]
