[gd_scene load_steps=12 format=2]

[ext_resource path="res://ClosingGradient.png" type="Texture" id=1]
[ext_resource path="res://fonts/pixelMiners25.tres" type="DynamicFont" id=2]
[ext_resource path="res://ground1.png" type="Texture" id=3]
[ext_resource path="res://gameStart/Level1.gd" type="Script" id=4]
[ext_resource path="res://gameStart/Level2.gd" type="Script" id=5]
[ext_resource path="res://Kahrin Main Theme slow .wav" type="AudioStream" id=6]
[ext_resource path="res://PixelMiners-KKal.otf" type="DynamicFontData" id=7]
[ext_resource path="res://gameStart/returnToTitle.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0117647, 0.866667, 0.262745, 1 )
shadow_color = Color( 0.933333, 0.847059, 0.133333, 0.6 )
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.498039, 0.635294, 1, 1 )
shadow_color = Color( 0.92549, 0.396078, 0.396078, 0.6 )
shadow_size = 6

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 7 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ClosingGradient" type="Sprite" parent="."]
position = Vector2( 520.616, 298.961 )
scale = Vector2( 0.885839, 0.767114 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 70.0
margin_top = 70.0
margin_right = 900.0
margin_bottom = 510.0

[node name="LevelSelectionLabel" type="Label" parent="HBoxContainer"]
margin_top = 179.0
margin_right = 468.0
margin_bottom = 261.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.92549, 0.396078, 0.396078, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Level Select"
align = 1

[node name="ground1" type="Sprite" parent="."]
position = Vector2( 521.266, 234.701 )
scale = Vector2( 1.07415, 1 )
texture = ExtResource( 3 )

[node name="Level1" type="Button" parent="."]
margin_left = 610.0
margin_top = 245.0
margin_right = 715.0
margin_bottom = 341.0
rect_min_size = Vector2( 88, 88 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "1"
script = ExtResource( 4 )

[node name="Level2" type="Button" parent="."]
margin_left = 767.0
margin_top = 244.0
margin_right = 869.0
margin_bottom = 343.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "2"
script = ExtResource( 5 )

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -29.171
autoplay = true

[node name="backButton" type="Button" parent="."]
margin_left = 400.0
margin_top = 440.0
margin_right = 650.0
margin_bottom = 490.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "back"
script = ExtResource( 8 )
[connection signal="pressed" from="Level1" to="Level1" method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="Level2" method="_on_Level2_pressed"]
[connection signal="pressed" from="backButton" to="backButton" method="_on_backButton_pressed"]
