[gd_scene load_steps=11 format=2]

[ext_resource path="res://gameStart/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/pixelMiners25.tres" type="DynamicFont" id=2]
[ext_resource path="res://PixelMiners-KKal.otf" type="DynamicFontData" id=3]
[ext_resource path="res://gameStart/MusicToggle.gd" type="Script" id=4]
[ext_resource path="res://Kahrin Intro 2 (online-audio-converter.com).wav" type="AudioStream" id=5]
[ext_resource path="res://gameStart/returnToTitle.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=2]
size = 40
extra_spacing_top = 11
extra_spacing_bottom = 11
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
extra_spacing_top = 11
extra_spacing_bottom = 11
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 1.55649
margin_top = -2.71371
margin_right = 1022.56
margin_bottom = 603.286

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 60.0
margin_top = 52.0
margin_right = 960.0
margin_bottom = 552.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 900, 500 )

[node name="OptionsTitle" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 900.0
margin_bottom = 82.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.92549, 0.396078, 0.396078, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Options"
align = 1

[node name="VolumeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 900.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.92549, 0.396078, 0.396078, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Volume"
align = 1

[node name="MusicToggle" type="CheckButton" parent="CenterContainer"]
margin_left = 431.0
margin_top = 282.0
margin_right = 589.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.396078, 0.396078, 1 )
pressed = true
text = "Music"
align = 1
script = ExtResource( 4 )

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="BackButton" type="Button" parent="."]
margin_left = 354.218
margin_top = 478.467
margin_right = 654.218
margin_bottom = 541.467
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "back"
script = ExtResource( 6 )

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 278.847
margin_top = 206.113
margin_right = 771.847
margin_bottom = 271.113
rect_min_size = Vector2( 300, 50 )
ticks_on_borders = true

[node name="LevelSelect" type="Button" parent="."]
margin_left = 387.704
margin_top = 359.196
margin_right = 627.704
margin_bottom = 409.196
custom_fonts/font = SubResource( 4 )
text = "Level Select"
[connection signal="toggled" from="CenterContainer/MusicToggle" to="CenterContainer/MusicToggle" method="_on_MusicToggle_toggled"]
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
