extends Control


#returns to title menu when button pressed
func _on_BackButton_pressed():
	get_tree().change_scene('res://TitleScreen/TitleScreen.tscn');


func _on_TryAgain_pressed():
	get_tree().change_scene('res://TitleScreen/TitleScreen.tscn');
	



func _on_backButton_pressed():
	get_tree().change_scene('res://TitleScreen/TitleScreen.tscn');
